force-app/main/default/objects/Opportunity/fields/Business_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Closure_Date__c</fullName>
    <label>폐업일자</label>
    <type>Date</type>
</CustomField>