force-app/main/default/objects/Opportunity/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <description>Normalized business registration number used for NTS status verification.</description>
    <label>사업자번호</label>
    <length>12</length>
    <type>Text</type>
</CustomField>