force-app/main/default/objects/Opportunity/fields/Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Status__c</fullName>
    <label>사업자 상태</label>
    <length>255</length>
    <type>Text</type>
</CustomField>