force-app/main/default/objects/Opportunity/fields/Business_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Verification_Notes__c</fullName>
    <label>사업자 검증 메모</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>