force-app/main/default/objects/Opportunity/fields/Business_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Business_Verified_At__c</fullName>
    <label>사업자번호 검증 일시</label>
    <type>DateTime</type>
</CustomField>