force-app/main/default/objects/Opportunity/fields/Calculated_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Amount__c</fullName>
    <label>계산 총 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>