force-app/main/default/objects/Opportunity/fields/Current_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>현재 결재 요청</label>
    <referenceTo>Quote_Approval_Request__c</referenceTo>
    <relationshipLabel>Current Approval Opportunities</relationshipLabel>
    <relationshipName>CurrentApprovalOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>