force-app/main/default/objects/Opportunity/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <label>의사결정 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>검토중</fullName>
                <default>true</default>
                <label>검토중</label>
            </value>
            <value>
                <fullName>견적중</fullName>
            </value>
            <value>
                <fullName>내부결재중</fullName>
            </value>
            <value>
                <fullName>구매확정</fullName>
            </value>
            <value>
                <fullName>보류</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>