force-app/main/default/objects/Opportunity/fields/Expected_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Install_Date__c</fullName>
    <label>희망 설치일</label>
    <type>Date</type>
</CustomField>