force-app/main/default/objects/Opportunity/fields/Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Detail__c</fullName>
    <label>실패 사유 상세</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>