force-app/main/default/objects/Opportunity/fields/Lost_Reason_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Secondary__c</fullName>
    <label>2차 실패 사유</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>가격</fullName>
            </value>
            <value>
                <fullName>예산 부족</fullName>
            </value>
            <value>
                <fullName>일정 지연</fullName>
            </value>
            <value>
                <fullName>기능 부족</fullName>
            </value>
            <value>
                <fullName>경쟁사 선택</fullName>
            </value>
            <value>
                <fullName>내부 승인 실패</fullName>
            </value>
            <value>
                <fullName>고객 우선순위 변경</fullName>
            </value>
            <value>
                <fullName>응답 없음</fullName>
            </value>
            <value>
                <fullName>중복/부적합 리드</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>