force-app/main/default/objects/Opportunity/fields/Lost_To_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_To_Competitor__c</fullName>
    <label>실패 시 경쟁사</label>
    <length>255</length>
    <type>Text</type>
</CustomField>