force-app/main/default/objects/Opportunity/fields/Purchase_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Total_Amount__c</fullName>
    <label>구매 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>