force-app/main/default/objects/Opportunity/fields/Quote_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Status__c</fullName>
    <label>견적 결재 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>없음</fullName>
                <default>true</default>
                <label>없음</label>
            </value>
            <value>
                <fullName>승인대기</fullName>
            </value>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>