force-app/main/default/objects/Opportunity/fields/Quote_Approver__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approver__c</fullName>
    <label>견적 결재자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Approval Opportunities</relationshipLabel>
    <relationshipName>QuoteApprovalOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>