force-app/main/default/objects/Opportunity/fields/Reopen_Potential__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Potential__c</fullName>
    <label>재오픈 가능성</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>높음</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
                <default>true</default>
                <label>보통</label>
            </value>
            <value>
                <fullName>낮음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>