force-app/main/default/objects/Opportunity/fields/Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model__c</fullName>
    <label>상담 방식</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>렌탈</fullName>
            </value>
            <value>
                <fullName>구매</fullName>
            </value>
            <value>
                <fullName>비교 후 결정</fullName>
                <default>true</default>
                <label>비교 후 결정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>