force-app/main/default/objects/Opportunity/validationRules/Enforce_Quote_Sync_Before_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Quote_Sync_Before_Close</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    /* 1. 단계가 변경되었을 때만 작동 */
    ISCHANGED(StageName), 
    
    /* 2. &apos;계약 생성 🤝&apos; 단계로 가려고 할 때 (또는 마감 단계들) */
    OR(
        ISPICKVAL(StageName, &quot;계약 생성&quot;),
        ISPICKVAL(StageName, &quot;마감됨&quot;) 
    ),
    
    /* 3. 동기화된 견적 필드가 비어있다면 에러! */
    ISBLANK(SyncedQuoteId)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>&quot;견적서가 동기화되지 않았습니다. [견적] 탭에서 해당 견적서를 동기화한 후 단계를 진행해 주세요.&quot;</errorMessage>
</ValidationRule>