force-app/main/default/objects/Opportunity/validationRules/Require_Competitor_Name_On_Competitor_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Competitor_Name_On_Competitor_Loss</fullName>
    <active>true</active>
    <description>경쟁사 때문에 수주 실패한 경우 경쟁사명을 남기도록 강제합니다.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, "수주 실패"),
OR(
ISPICKVAL(Lost_Reason_Primary__c, "경쟁사 선택"),
ISPICKVAL(Lost_Reason_Secondary__c, "경쟁사 선택")
),
ISBLANK(Lost_To_Competitor__c)
)</errorConditionFormula>
    <errorDisplayField>Lost_To_Competitor__c</errorDisplayField>
    <errorMessage>실패 사유가 경쟁사 선택인 경우 경쟁사명을 입력해야 합니다.</errorMessage>
</ValidationRule>